# Iot_Gateway

./: .editorconfig  .env.example  .flake8  .gitignore  .prettierignore  .prettierrc  .pylintrc  COMPLETION_REPORT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  REBUILD_GUIDE.md  RELIABILITY_SUMMARY.md  WORKSPACE.md  create_trigger_39.py  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  rebuild.sh  requirements.txt  start.sh
.github/agents/: docs-review.agent.md  explore.agent.md  logical-commits.agent.md
app/: __init__.py  config.py  main.py
app/database/: __init__.py  connection.py  models.py
app/drivers/: __init__.py  arduino_button_bpm280.py  arduino_button_dht11.py  arduino_mq2.py  base.py  generic_json.py
arduino/: .env.example  DOCKER.md  Dockerfile.bridge  QUICKSTART.md  README.md  WIRING.md  bridge.py  bridge_button_bpm280.py  bridge_button_dht11.py  diagnose_ports.py  docker-entrypoint.sh  run_serial_tcp_tunnel.sh  serial_tcp_bridge.py  test_bridge_autodetect.py  test_button_bpm280_driver.py  test_button_dht11_driver.py  test_driver.py
data/: iot_core.db.bak_20260310_182153
docs/: API.md  ARCHITECTURE.md  ARDUINO_BUTTON_BPM280.md  ARDUINO_BUTTON_DHT11.md  ARDUINO_MQ2.md  DEVELOPMENT.md  EXAMPLES.md  MIGRATION_PLAN.md  MQTT_TEST.md  RELIABILITY_IMPROVEMENTS.md  WEBHOOK_RECEIVER.md  index.md
mosquitto/: init_users.sh
scripts/: bridges.conf  bridges.conf.example  install_debian.sh  migrate_driver_type_to_dht11.py  start_bridge_host.sh  stop_bridge_host.sh
webhook_receiver/: app.py
(+69 files in other folders)
