[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway-demo"
version = "0.1.0"
description = "Gateway Demo Project"
requires-python = ">=3.9"
dependencies = []

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
  | venv
  | .venv
)/
'''

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # Pyflakes
  "I",      # isort
  "C",      # flake8-comprehensions
  "B",      # flake8-bugbear
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]

ignore = [
  "E501",   # line too long, handled by black
  "B008",   # do not perform function calls in argument defaults
  "SIM105", # use contextlib.suppress
  "SIM117", # multiple with statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"*/tests/*" = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
